src/resources/postcss/tribe-common-admin.pcss
/* ... */
.tribe-events-admin__issues-found-card-description-actions {
	display: flex;
	padding: 20px 0 10px;
}

.tribe-events-admin__issues-found-card-description-actions a {
	font-size: 16px;
	text-decoration: none;
	color: #334aff;
	margin-right: 20px;
	padding-bottom: 5px;
	border-bottom: 2px solid #334aff;

	&:focus {
		box-shadow: none;
		outline: none;
	}

	&:hover {
		color: #1c39bb;
		border-bottom: 2px solid #1c39bb;
	}
}

.tribe-events-admin__ea-status-table {
	border-radius: 16px;
	border: 1px solid #e1e1e4;
	margin: 30px 0 40px;
	width: 100%;
	padding: 20px 0;
	overflow: hidden;
}

.tribe-events-admin__ea-status-table a {
	text-decoration: none;
	color: #334aff;
	padding-bottom: 2px;
	border-bottom: 2px solid #334aff;

	&:focus {
		box-shadow: none;
		outline: none;
	}

	&:hover {
		color: #1c39bb;
		border-bottom: 2px solid #1c39bb;
	}
}

.tribe-events-admin__ea-status-table tr {
	display: flex;
	align-items: center;

	@media only screen and (max-width: 480px)  {
		flex-direction: column;
		align-items: flex-start;
	}
}

.tribe-events-admin__ea-status-table th {
	font-weight: bold;
	line-height: 1.17;
	color: #0f1031;
	padding: 5px 25px;
	margin-top: 10px;
}

.tribe-events-admin__ea-status-table td {
	font-size: 16px;
	line-height: 1.63;
	color: #0f1031;
	padding: 10px 25px;
	display: flex;
	align-items: center;
	width: 25%;

	@media only screen and (max-width: 480px)  {
		width: 100%;
		flex-direction: column;
		align-items: flex-start;
	}
}

.tribe-events-admin__ea-status-table td:nth-child(2){
	width: 45%;

	@media only screen and (max-width: 480px)  {
		width: 100%;
	}
}

.tribe-events-admin__ea-status-table td:nth-child(3){
	width: 30%;
	display: flex;
	justify-content: flex-end;

	@media only screen and (max-width: 480px)  {
		width: 100%;
		flex-direction: column;
	}
}

.tribe-events-admin__ea-status-table td:nth-child(3) a {

	@media only screen and (max-width: 480px)  {
		margin-right: 50px;
	}
}

.tribe-events-admin__ea-status-table-dark{
	background-color: #f9f7f4;
}

.tribe-events-admin__ea-status-table td img {
	width: 21px;
	height: 21px;
	object-fit: contain;
	margin-right: 14px;

	@media only screen and (max-width: 480px) {
		margin: 10px 0;
	}
}

.tribe_events_page_tec-troubleshooting {
	background-color: #FFF;
}

#tribe-ticketing,
#tribe-community {
	display: none;
}
.tribe-events-admin__troubleshooting-notice {
	background-color: #161b7d;
	color: #fff;
	font-size: 16px;
	padding: 24px 0;
	line-height: 1;
	margin-left: -1.55vw;

	@media screen and (max-width: 480px) {
		margin-left: -20px;
	}
}

.tribe-events-admin__troubleshooting-notice_title {
	margin: 0 auto;
	max-width: 1024px;
	width: 90%;
	padding-left: 25px;

	@media screen and (max-width: 480px) {
		max-width: 90%;
	}
}

.tribe-events-admin__troubleshooting-notice_title a {
	color: #fff;
	font-size: 16px;
	line-height: 1;
	text-decoration: none;
	padding-bottom: 2px;
	border-bottom: 2px solid #fff;

	&:focus {
		box-shadow: none;
		outline: none;
	}

	&:hover {
		color: #f3eee8;
		border-bottom: 2px solid #f3eee8;
	}
}

/* -- Help page overrides -- */
/*
TODO:
- fix right side alignment
*/
.tribe_events_page_tribe-help {
	#tec-help-ticketing,
	#tec-help-community {
		display: none;
	}

	.tribe-events-admin-title {
		padding-top: 25px;

		img {
			height: 67px;
		}
	}
}

/* -- Freemius tweaks -- */
body.tribe-welcome #fs_connect {
	border: 1px solid #e1e1e4;
	box-sizing: border-box;
	border-radius: 16px;
	margin-left: 22px;
	box-shadow: none;

	.fs-actions {
		background-color: transparent;
	}

	.fs-permissions {
		border-top: 1px solid #e1e1e4;
		margin: 0 16px;
	}

	button {
		background-color: #3d54ff;
		border-color: #3d54ff;
	}

	.button-secondary {
		border-color: #3d54ff;
		color: #3d54ff;
		background: white;
	}

	a {
		color: #3d54ff;

		&:focus {
			box-shadow: none;
			outline: none;
		}

		&:hover {
			color: #161b7d;
		}
	}
}

